--- a/1_cv/01_cv_1_class.ipynb
+++ b/1_cv/01_cv_1_class.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,21 @@
       "<class 'numpy.ndarray'>\n",
       "(630, 630)\n",
       "uint8\n",
-      "height: 630, width: 630\n",
+      "height: 630, width: 630\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-03-20 18:44:28.865 python[61978:8330844] +[IMKClient subclass]: chose IMKClient_Modern\n",
+      "2025-03-20 18:44:28.865 python[61978:8330844] +[IMKInputSession subclass]: chose IMKInputSession_Modern\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "close window before exit\n"
      ]
     }
@@ -350,7 +364,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "src = cv2.imread('./fig/airplane.bmp', cv2.IMREAD_COLOR)        # src image should be a color image\n",
     "mask = cv2.imread('./fig/mask_plane.bmp', cv2.IMREAD_GRAYSCALE) # mask image should be a grayscale image\n",
