--- a/1_cv/03_cv_filter_warp.ipynb
+++ b/1_cv/03_cv_filter_warp.ipynb
@@ -518,7 +518,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 9. 영상 전단"
+    "### 9. 영상 전단 (Shear)"
    ]
   },
   {
