--- a/1_cv/02_cv2_class.ipynb
+++ b/1_cv/02_cv2_class.ipynb
@@ -206,7 +206,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 모든이미지는 Histogram (히스토그램)을 이용하여 그림을 그린다.\n",
+    "## 모든 이미지는 Histogram (히스토그램)을 이용하여 그림을 그린다.\n",
     "히스토그램에서 X축과 Y축의 의미는 다음과 같습니다: \n",
     "[ref 2503_KOSA_OpenCV_5d.pdf 13page](2503_KOSA_OpenCV_5d.pdf)\n",
     "\n",
@@ -584,6 +584,17 @@
       "Absolute path of image folder: /Users/joshuapark/Desktop/AI_Master_Lec/1_cv/fig/images\n",
       "list_files: ['boat_mountains_lake_135258_1920x1080.jpg', 'forest_fog_trees_128751_1920x1080.jpg', 'pier_dock_sea_dusk_shore_118549_1920x1080.jpg', 'autumn_forest_park_128379_1920x1080.jpg', 'road_marking_evening_clouds_horizon_120298_1920x1080.jpg']\n",
       "image_files: ['boat_mountains_lake_135258_1920x1080.jpg', 'forest_fog_trees_128751_1920x1080.jpg', 'pier_dock_sea_dusk_shore_118549_1920x1080.jpg', 'autumn_forest_park_128379_1920x1080.jpg', 'road_marking_evening_clouds_horizon_120298_1920x1080.jpg']\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the current cell or a previous cell. \n",
+      "\u001b[1;31mPlease review the code in the cell(s) to identify a possible cause of the failure. \n",
+      "\u001b[1;31mClick <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. \n",
+      "\u001b[1;31mView Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
      ]
     }
    ],
