--- a/AI_Master/0_기본_파이토치개요및설치.ipynb
+++ b/AI_Master/0_기본_파이토치개요및설치.ipynb
@@ -204,14 +204,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GPU 사용 불가능\n"
+      "GPU 사용 불가능 (CPU 사용)\n"
      ]
     }
    ],
@@ -225,31 +225,22 @@
     "    print(\"현재 사용 중인 GPU:\", torch.cuda.current_device())\n",
     "    print(\"GPU 이름:\", torch.cuda.get_device_name(torch.cuda.current_device()))\n",
     "else:\n",
-    "    print(\"GPU 사용 불가능\")"
+    "    print(\"GPU 사용 불가능 (CPU 사용)\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "Torch not compiled with CUDA enabled",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[3], line 10\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[38;5;28mprint\u001b[39m(x\u001b[38;5;241m.\u001b[39mis_cuda)\n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# GPU로 옮기기\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m x \u001b[38;5;241m=\u001b[39m x\u001b[38;5;241m.\u001b[39mcuda()\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28mprint\u001b[39m(x\u001b[38;5;241m.\u001b[39mis_cuda) \u001b[38;5;66;03m# print(x.is_cuda)는 False를 출력합니다.\u001b[39;00m\n\u001b[1;32m     13\u001b[0m x \u001b[38;5;241m=\u001b[39m x\u001b[38;5;241m.\u001b[39mcpu() \u001b[38;5;66;03m# CPU로 옮기기\u001b[39;00m\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/torch/cuda/__init__.py:310\u001b[0m, in \u001b[0;36m_lazy_init\u001b[0;34m()\u001b[0m\n\u001b[1;32m    305\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[1;32m    306\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot re-initialize CUDA in forked subprocess. To use CUDA with \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    307\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmultiprocessing, you must use the \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mspawn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m start method\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    308\u001b[0m     )\n\u001b[1;32m    309\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(torch\u001b[38;5;241m.\u001b[39m_C, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_cuda_getDeviceCount\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m--> 310\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTorch not compiled with CUDA enabled\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    311\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _cudart \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    312\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\n\u001b[1;32m    313\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlibcudart functions unavailable. It looks like you have a broken build?\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    314\u001b[0m     )\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Torch not compiled with CUDA enabled"
+      "False\n",
+      "Torch not compiled with CUDA enabled\n",
+      "x.is_cuda: False owing to Torch not compiled with CUDA enabled, so it is on CPU now\n",
+      "Done\n"
      ]
     }
    ],
@@ -262,12 +253,16 @@
     "x = torch.tensor(sample)  # torch.tensor(sample)을 호출하여 텐서를 생성합니다.\n",
     "print(x.is_cuda)\n",
     "\n",
-    "# GPU로 옮기기\n",
-    "x = x.cuda()\n",
-    "print(x.is_cuda) # print(x.is_cuda)는 False를 출력합니다.\n",
-    "\n",
-    "x = x.cpu() # CPU로 옮기기\n",
-    "print(x.is_cuda)"
+    "try:\n",
+    "    # GPU로 옮기기\n",
+    "    x = x.cuda()  # GPU로 옮기려고 하면 에러가 발생합니다.\n",
+    "    print(x.is_cuda) # print(x.is_cuda)는 False를 출력합니다.\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    x = x.cpu() # CPU로 옮기기\n",
+    "    print(f'x.is_cuda: {x.is_cuda} owing to {e}, so it is on CPU now')\n",
+    "finally:\n",
+    "    print(\"Done\")"
    ]
   },
   {
@@ -287,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -335,13 +330,13 @@
     "# device 확인\n",
     "import torch\n",
     "\n",
-    "tensor = torch.rand(3, 4)\n",
+    "tensor = torch.rand(3, 4) # 3x4 크기의 랜덤 텐서를 생성합니다.\n",
     "print(f\"Device: {tensor.device}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -381,26 +376,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Device: cpu\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "Torch not compiled with CUDA enabled",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[8], line 20\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDevice: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtensor\u001b[38;5;241m.\u001b[39mdevice\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)  \u001b[38;5;66;03m# tensor가 GPU에 있는지 확인\u001b[39;00m\n\u001b[1;32m     19\u001b[0m \u001b[38;5;66;03m# 만약 GPU가 아닌 'cuda:0' 장치에 텐서를 명시적으로 옮기고 싶다면 아래처럼 작성\u001b[39;00m\n\u001b[0;32m---> 20\u001b[0m tensor \u001b[38;5;241m=\u001b[39m tensor\u001b[38;5;241m.\u001b[39mto(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mcuda:0\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m# 다시 디바이스 출력\u001b[39;00m\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mDevice (명시적 이동 후): \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtensor\u001b[38;5;241m.\u001b[39mdevice\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[0;32m/opt/anaconda3/lib/python3.12/site-packages/torch/cuda/__init__.py:310\u001b[0m, in \u001b[0;36m_lazy_init\u001b[0;34m()\u001b[0m\n\u001b[1;32m    305\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mRuntimeError\u001b[39;00m(\n\u001b[1;32m    306\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCannot re-initialize CUDA in forked subprocess. To use CUDA with \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    307\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmultiprocessing, you must use the \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mspawn\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m start method\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    308\u001b[0m     )\n\u001b[1;32m    309\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(torch\u001b[38;5;241m.\u001b[39m_C, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m_cuda_getDeviceCount\u001b[39m\u001b[38;5;124m\"\u001b[39m):\n\u001b[0;32m--> 310\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTorch not compiled with CUDA enabled\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m    311\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m _cudart \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m    312\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mAssertionError\u001b[39;00m(\n\u001b[1;32m    313\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlibcudart functions unavailable. It looks like you have a broken build?\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[1;32m    314\u001b[0m     )\n",
-      "\u001b[0;31mAssertionError\u001b[0m: Torch not compiled with CUDA enabled"
+      "Device: cpu\n",
+      "Torch not compiled with CUDA enabled\n",
+      "Device (명시적 이동 X후): cpu\n"
      ]
     }
    ],
@@ -424,10 +409,13 @@
     "print(f\"Device: {tensor.device}\")  # tensor가 GPU에 있는지 확인\n",
     "\n",
     "# 만약 GPU가 아닌 'cuda:0' 장치에 텐서를 명시적으로 옮기고 싶다면 아래처럼 작성\n",
-    "tensor = tensor.to('cuda:0')\n",
-    "\n",
-    "# 다시 디바이스 출력\n",
-    "print(f\"Device (명시적 이동 후): {tensor.device}\")"
+    "try:\n",
+    "    tensor = tensor.to('cuda:0')\n",
+    "    # 다시 디바이스 출력\n",
+    "    print(f\"Device (명시적 이동 후): {tensor.device}\")\n",
+    "except Exception as e:\n",
+    "    print(e)\n",
+    "    print(f\"Device (명시적 이동 X후): {tensor.device}\")"
    ]
   },
   {
@@ -867,7 +855,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.2"
+   "version": "3.12.7"
   },
   "toc": {
    "base_numbering": 1,
