--- a/AI_Master/1_기본_딥러닝및머신러닝이론.ipynb
+++ b/AI_Master/1_기본_딥러닝및머신러닝이론.ipynb
@@ -752,7 +752,7 @@
     "# 데이터 로드\n",
     "data = load_iris()  # Iris 꽃 데이터셋 사용\n",
     "# 아이리스 데이터셋은 150개의 샘플과 4개의 특성(꽃받침 길이, 꽃받침 폭, 꽃잎 길이, 꽃잎 폭)으로 구성되어 있으며, 3개의 클래스를 가진 데이터입니다.\n",
-    "X = data.data  # 입력 데이터\n",
+    "X = data.data    # 입력 데이터\n",
     "y = data.target  # 출력 데이터(클래스 라벨)\n",
     "# X는 독립 변수(특성, 입력 데이터)이며, y는 종속 변수(클래스 레이블)입니다.\n",
     "\n",
@@ -796,9 +796,29 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "에포크 0 | 손실: 0.7898\n",
+      "에포크 10 | 손실: 0.7473\n",
+      "에포크 20 | 손실: 0.7102\n",
+      "에포크 30 | 손실: 0.6777\n",
+      "에포크 40 | 손실: 0.6492\n",
+      "에포크 50 | 손실: 0.6241\n",
+      "에포크 60 | 손실: 0.6019\n",
+      "에포크 70 | 손실: 0.5821\n",
+      "에포크 80 | 손실: 0.5645\n",
+      "에포크 90 | 손실: 0.5487\n",
+      "테스트 정확도: 76.50%\n"
+     ]
+    }
+   ],
    "source": [
-    "# 필요한 라이브러리 불러오기\n",
+    "# 위 코드는 PyTorch를 사용하여 간단한 신경망 모델을 구현하고, 이진 분류 문제를 해결하는 과정을 보여줍니다.\n",
+    "# 단계별로 자세히 설명해 드리겠습니다.\n",
+    "\n",
     "import torch  # 딥러닝 프레임워크\n",
     "import torch.nn as nn  # 신경망 설계를 위한 모듈\n",
     "import torch.optim as optim  # 최적화 함수 (파라미터 업데이트)\n",
@@ -806,8 +826,12 @@
     "from sklearn.model_selection import train_test_split  # 데이터 분리 도구\n",
     "\n",
     "# (1) 데이터 생성\n",
-    "# 1000개의 데이터 샘플을 생성하며, 각 데이터는 10개의 특징(feature)을 가짐\n",
+    "# make_classification 함수를 사용하여 인공적인 분류 데이터셋을 생성합니다.\n",
+    "# 1000개의 샘플, 각 샘플당 10개의 특성을 가지는 이진 분류(2개 클래스) 데이터셋을 만듭니다.\n",
     "# 이진 분류를 수행하기 위해 2개의 클래스로 데이터 생성\n",
+    "# random_state=42로 설정하여 결과 재현성을 보장합니다.\n",
+    "# 결과 재현성이란, 같은 코드를 실행해도 항상 같은 결과가 나오도록 하는 것을 의미합니다.\n",
+    "# 42로 설정한 이유는 딥러닝 분야에서 많이 사용하는 숫자이기 때문입니다.\n",
     "X, y = make_classification(n_samples=1000, n_features=10, n_classes=2, random_state=42)\n",
     "\n",
     "# 데이터를 학습용(80%)과 테스트용(20%)으로 나누기\n",
@@ -815,8 +839,10 @@
     "\n",
     "# (2) 데이터를 PyTorch 텐서로 변환\n",
     "# PyTorch는 내부적으로 tensor 데이터 타입을 사용함\n",
-    "# 학습용 데이터\n",
+    "# 학습용 데이터, 입력 데이터는 float32 타입으로 변환합니다.\n",
     "X_train_tensor = torch.tensor(X_train, dtype=torch.float32)  # 특징 데이터\n",
+    "# 레이블 데이터 y를 (n, 1) 형태로 변환하여 손실 함수의 입력 형태에 맞게 조정합니다\n",
+    "# view(-1, 1)는 배열을 2차원으로 만들며, -1은 자동으로 크기를 맞추라는 의미입니다.\n",
     "y_train_tensor = torch.tensor(y_train, dtype=torch.float32).view(-1, 1)  # 레이블 데이터 (-1, 1로 reshape)\n",
     "# 테스트용 데이터\n",
     "X_test_tensor = torch.tensor(X_test, dtype=torch.float32)\n",
@@ -824,15 +850,18 @@
     "\n",
     "# (3) 신경망 모델 정의하기\n",
     "# 신경망 모델인 \"SimpleNN\" 클래스 정의\n",
-    "class SimpleNN(nn.Module):  # PyTorch의 nn.Module을 상속받아 정의\n",
+    "# nn.Module을 상속받아 정의\n",
+    "# 하나의 선형 레이어(nn.Linear)만 사용하는 매우 단순한 구조입니다.\n",
+    "class SimpleNN(nn.Module):\n",
     "    def __init__(self):\n",
     "        super(SimpleNN, self).__init__()\n",
-    "        self.layer = nn.Linear(10, 1)  # 선형 레이어. 입력 10개 -> 출력 1개\n",
+    "        self.layer = nn.Linear(10, 1)  # 선형 레이어. 입력층: 10개 노드 (특성 수), 출력층: 1개 노드 (이진 분류)\n",
     "\n",
+    "    # 데이터가 네트워크를 통과하는 순전파 과정을 정의합니다.\n",
+    "    # 선형 계산 후 시그모이드 활성화 함수를 적용하여 0과 1 사이의 확률값을 출력합니다.\n",
     "    def forward(self, x):\n",
     "        # 순전파(forward) 함수. 입력 데이터를 받아 결과를 반환\n",
     "        return torch.sigmoid(self.layer(x))\n",
-    "    # 활성화 함수로 시그모이드(Sigmoid) 사용\n",
     "\n",
     "# 모델 객체 생성\n",
     "model = SimpleNN()\n",
