--- a/AI_Master/1_기본_딥러닝및머신러닝이론.ipynb
+++ b/AI_Master/1_기본_딥러닝및머신러닝이론.ipynb
@@ -859,6 +859,8 @@
     "\n",
     "    # 데이터가 네트워크를 통과하는 순전파 과정을 정의합니다.\n",
     "    # 선형 계산 후 시그모이드 활성화 함수를 적용하여 0과 1 사이의 확률값을 출력합니다.\n",
+    "    # 이진 분류 문제에서는 시그모이드 함수를 사용하여 확률값을 계산합니다.\n",
+    "    # 시그모이드 함수의 특징은 0과 1 사이의 값을 출력하며, 출력값을 확률로 해석할 수 있습니다.\n",
     "    def forward(self, x):\n",
     "        # 순전파(forward) 함수. 입력 데이터를 받아 결과를 반환\n",
     "        return torch.sigmoid(self.layer(x))\n",
@@ -869,33 +871,69 @@
     "# (4) 손실 함수와 최적화 함수 정의\n",
     "\n",
     "# 손실 함수: BCELoss - 이진 분류(Binary Classification)를 위한 손실 함수\n",
-    "criterion = nn.BCELoss()\n",
-    "# 최적화 함수: SGD(Stochastic Gradient Descent) - 학습 속도는 0.01\n",
+    "criterion = nn.BCELoss() # 이진 분류 문제에 적합한 손실 함수, 예측 확률과 실제 레이블 간의 오차를 측정합니다.\n",
+    "# 최적화 함수: SGD(Stochastic Gradient Descen, (확률적 경사 하강법)\n",
+    "# 학습률(learning rate)은 0.01로 설정됩니다.\n",
+    "# 모델의 모든 파라미터(가중치와 편향)에 대해 최적화를 수행합니다.\n",
     "optimizer = optim.SGD(model.parameters(), lr=0.01)\n",
     "\n",
-    "# (5) 모델 학습(Training)\n",
+    "# (5) 모델 학습(Training using model.train())\n",
     "epochs = 100  # 데이터 전체를 100번 학습\n",
     "for epoch in range(epochs):  # 각 에포크(epoch) 반복\n",
     "    model.train()  # 모델을 학습 모드로 전환\n",
     "    optimizer.zero_grad()  # 이전 에포크에서 계산된 기울기(gradient) 초기화\n",
     "    y_pred = model(X_train_tensor)  # 입력 데이터를 모델에 전달해 예측값 계산\n",
     "    loss = criterion(y_pred, y_train_tensor)  # 예측값과 실제값을 비교해 손실 계산\n",
-    "    loss.backward()  # 손실에 따른 기울기(gradient) 계산\n",
-    "    optimizer.step()  # 기울기를 사용해 모델 파라미터(가중치, 편향) 업데이트\n",
+    "    loss.backward()   # 손실에 대한 기울기(gradient)를 계산합니다(역전파).\n",
+    "    optimizer.step()  # 계산된 기울기를 사용하여 모델 파라미터(가중치, 편향)를 업데이트합니다.\n",
     "\n",
     "    # 10 에포크마다 손실 값을 출력\n",
     "    if epoch % 10 == 0:\n",
     "        print(f\"에포크 {epoch} | 손실: {loss.item():.4f}\")  # 현재 에포크와 손실 값 출력\n",
     "\n",
-    "# (6) 모델 테스트(Test)\n",
-    "model.eval()  # 모델을 평가 모드로 전환\n",
-    "with torch.no_grad():  # 평가에서는 기울기를 계산하지 않음\n",
+    "# (6) 모델 평가(Test using model.eval())\n",
+    "model.eval()  # 모델을 평가 모드로 설정합니다(드롭아웃 등의 학습 전용 기능 비활성화).\n",
+    "with torch.no_grad():  # 테스트 중에는 기울기 계산이 필요 없으므로 메모리 사용량을 줄이고 속도를 높입니다.\n",
     "    y_test_pred = model(X_test_tensor)  # 테스트 데이터를 사용해 예측값 계산\n",
-    "    y_test_pred = (y_test_pred > 0.5).float()  # 0.5를 기준으로 0 또는 1로 분류\n",
+    "    y_test_pred = (y_test_pred > 0.5).float()  # 모델 출력(확률)을 0.5를 기준으로 이진 클래스(0 또는 1)로 변환합니다.\n",
     "    # 정확도 계산\n",
     "    accuracy = (y_test_pred.eq(y_test_tensor).sum().item()) / y_test_tensor.shape[0]\n",
     "    print(f\"테스트 정확도: {accuracy * 100:.2f}%\")  # 테스트 정확도 출력\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 에포크별 손실(Loss) 변화\n",
+    "\n",
+    "```bash\n",
+    "에포크 0 | 손실: 0.7898\n",
+    "에포크 10 | 손실: 0.7473\n",
+    "에포크 20 | 손실: 0.7102\n",
+    "에포크 30 | 손실: 0.6777\n",
+    "에포크 40 | 손실: 0.6492\n",
+    "에포크 50 | 손실: 0.6241\n",
+    "에포크 60 | 손실: 0.6019\n",
+    "에포크 70 | 손실: 0.5821\n",
+    "에포크 80 | 손실: 0.5645\n",
+    "에포크 90 | 손실: 0.5487\n",
+    "```\n",
+    "\n",
+    "손실 감소 추세 분석\n",
+    "\n",
+    "초기 손실: 학습을 시작한 에포크 0에서 손실값은 0.7898로 비교적 높습니다.<br>\n",
+    "지속적인 감소: 학습이 진행됨에 따라 손실값이 꾸준히 감소하고 있습니다.<br>\n",
+    "감소 속도: 초기에는 빠르게 감소하다가 학습이 진행될수록 감소 속도가 완만해집니다.<br>\n",
+    "\n",
+    "에포크 0-10: 약 0.0425 감소 (0.7898 → 0.7473)<br>\n",
+    "에포크 80-90: 약 0.0158 감소 (0.5645 → 0.5487)<br>\n",
+    "\n",
+    "\n",
+    "수렴 경향: 학습 후반부에도 여전히 손실이 감소하고 있어, 더 많은 에포크로 학습하면 손실이 더 낮아질 가능성이 있습니다.<br>\n",
+    "\n",
+    "최종 테스트 정확도"
    ]
   },
   {
