--- a/AI_Master/1_기본_딥러닝및머신러닝이론.ipynb
+++ b/AI_Master/1_기본_딥러닝및머신러닝이론.ipynb
@@ -979,8 +979,9 @@
     "\n",
     "- 출력층 (Output Layer):\n",
     "\n",
-    "  - 모델의 최종 예측값을 계산하는 층입니다.\n",
-    "  - 분류 문제에서는 보통 소프트맥스(Softmax) 함수로 확률값을 출력하고, 회귀 문제에서는 선형(Linear) 출력을 제공합니다.\n"
+    "  - 모델의 최종 ***예측값을 계산***하는 층입니다.\n",
+    "  - 분류 문제에서는 보통 ***소프트맥스(Softmax) 함수***로 ***확률값을 출력***하고, \n",
+    "  - 회귀 문제에서는 ***선형(Linear) 출력***을 제공합니다.\n"
    ]
   },
   {
