--- a/2_CNN/2_CNN_CIFAR.ipynb
+++ b/2_CNN/2_CNN_CIFAR.ipynb
@@ -2455,7 +2455,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "torchgpu_py3.12",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -2469,7 +2469,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.9"
+   "version": "3.12.2"
   }
  },
  "nbformat": 4,
